// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render Blogs correcly with no props 1`] = `
<DocumentFragment>
  <div>
    SearchBlog
    <div
      class="content-container"
    >
      <div
        class="blogs-container"
      >
        <div
          class="empty-blogs-list"
        >
          No blogs - 
          <a>
            Create One Here!
          </a>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Should render Blogs correcly with props 1`] = `
<DocumentFragment>
  <div>
    SearchBlog
    <div
      class="content-container"
    >
      <div
        class="blogs-container"
      >
        BlogItemBlogItem
      </div>
    </div>
  </div>
</DocumentFragment>
`;
